@@ -26,6 +26,7 @@ DB:
     - log rotation for mongodb logs (at midnight)
     - support for pluggable OCR module to scan screenshots taken by agents
     - new archive wizard for better housekeeping of data
+    - exported evidence via connectors are now more verbose
     - fix for operation and target backup not performing correctly
     - fix for file manager not deleting all entries in some cases
     - fix for the "disable on sync" flag for injectors
